<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="310dp" />

    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:layout_margin="20dp"
        android:text="@string/thank_you"/>

    <TextView
        android:id="@+id/txtUpgradeProDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:text="@string/you_have_now_have_access_to_feature"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_below="@id/txtUpgradeProDescription"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_white_outline_button"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:text="@string/you_re_awesome"/>
    </LinearLayout>


</RelativeLayout>