<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textColor="#fff"
            android:text="@string/save_preset"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDialogTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/preset_name" />
            <EditText
                android:id="@+id/edtPresetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_white_outline_button"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cancel"/>

                <Button
                    android:id="@+id/btnSavePreset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/round_white_outline_button"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>