<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/are_you_sure_you_want_to_delete"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/txtQuestion"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_white_outline_button"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:text="@string/no"/>
            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_white_outline_button"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:text="@string/yes"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>