<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".live_wallpaper.settings.SlideshowSettingsFragment">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linLaySlideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTransitionTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/transition_time"/>

        <Spinner
            android:id="@+id/spinnerTransitionTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/slideshow_transition_time"></Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/linLaySlideshow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestoreDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_black_outline_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/restore_default"/>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_black_outline_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/apply"/>
    </LinearLayout>

</RelativeLayout>