<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".live_wallpaper.settings.LiveWallpaperSettingsActivity">

        <include layout="@layout/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSnowfall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/txtSnowfallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/snowfall"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSnowfallDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtSnowfallTitle"
                    android:text="@string/add_a_beautiful_snowfall_animation" />

                <include
                    android:id="@+id/lblSnowfallCurrent"
                    layout="@layout/label_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtSnowfallDescription"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"></include>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSlideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/txtSlideshowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presets_slideshow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/txtSlideshowDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtSlideshowTitle"
                    android:text="@string/the_perfect_option_if_you_like_more_than_one_wallpaper" />

                <include
                    android:id="@+id/lblSlideshowCurrent"
                    layout="@layout/label_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtSlideshowDescription"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"></include>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>